...
                                      ),
                                    ),
                                  ),
                                  child: Row(
                                    children: [
                                      Pill(
                                        'Back',
                                        backStyle: true,
                                        icon: Icons.arrow_back,
                                        iconFirst: true,
                                        height: 44,
                                        reduced: state.reduced,
                                        onPressed: () => Navigator.pop(context),
...
                                          ),
                                        ),
                                      ),
                                      SizedBox(width: mobile ? 12 : 20),
                                      Pill(
                                        state.saved.contains(title.id)
                                            ? 'Remove from list'
                                            : 'Add to list',
                                        iconOnly: true,
                                        icon: state.saved.contains(title.id)
                                            ? Icons.check
                                            : Icons.add,
                                        height: 44,
                                        onPressed: () => state.user == null
...
